# maxclaw

./: .gitignore  E8_IMPLEMENTATION.md  README.md  TEMPLATE_SYSTEM.md  TEST_REPORT.md  install.sh  maxclaw-enhancement-plan.yaml  maxclaw-features-project.yaml  maxclaw-project.yaml  package-lock.json  package.json  playwright.config.ts  playwright.e2e.config.ts  tsconfig.json  vitest.config.ts
.claude/commands/: cancel-ralph-bmad.md  init-project.md  ralph-bmad-loop.md
.claude/scripts/: agent-orchestrator.sh  bootstrap-loop.sh  init-project-generator.sh  rate-limit-handler.sh  resilient-stop-hook.sh
_bmad-output/maxclaw/: status.yaml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
agents/: notifier.ts  scheduler.ts  summarizer.ts
docs/: README.md
docs/config/: ralph-bmad-dashboard.yaml
e2e/: dashboard.spec.ts
ralph-bmad-templates/: QUICKSTART.md  project-template.yaml
src/: ai-summarizer.ts  code-search.ts  config.ts  dashboard-admin.html  dashboard-server.ts  db.ts  github-client.ts  github-sync.ts  index.ts  logger.ts  notifier.ts  notion-client.ts  notion-sync.ts  profile-manager.ts  project-manager.ts  scheduler-manager.ts  scheduler.ts  session-export.ts  session-logger.ts  session-manager.ts  team-manager.ts  template-engine.ts  template-manager.ts  tui-cli.ts  types.ts  webhook-adapters.ts  workspace-manager.ts
src/templates/python/: README.md  pyproject.toml  template.yaml
src/templates/python/src/{{project_name_kebab}}/: __init__.py  __main__.py
src/templates/python/tests/: __init__.py
(+76 files in other folders)
